--- a/src/app/component/tab/tab.component.html
+++ b/src/app/component/tab/tab.component.html
@@ -18,5 +18,6 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, dolorum ratione. Aut, officiis obcaecati. Facere, eos excepturi maxime repudiandae aliquid, accusantium doloribus facilis cupiditate, sit ratione reiciendis blanditiis optio natus.
             </p>
         </div>
+        <app-section></app-section>
     </div>
 </div>
